# sayiir-workflow

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.devcontainer/: devcontainer.json
benchmarks/: .gitignore  Cargo.toml  Dockerfile  ci-bench.sh  docker-compose.yml
benchmarks/baselines/: README.md
benchmarks/grafana/dashboards/: sayiir-bench.json
benchmarks/grafana/provisioning/dashboards/: dashboards.yaml
benchmarks/grafana/provisioning/datasources/: prometheus.yaml
benchmarks/otel/: collector-config.yaml
benchmarks/prometheus/: prometheus.yml
benchmarks/src/: compare.rs  driver.rs  main.rs  metrics.rs  report.rs  sweep.rs
benchmarks/src/workloads/: fanout.rs  linear.rs  mod.rs  signal_driven.rs  sleeping.rs  throughput.rs
docs/: FORMAT.md  architecture.md  quick-start-python.md  quick-start-rust.md  use-cases.md  why-sayiir.md
examples/background-jobs-rs/: Cargo.toml  README.md
examples/background-jobs-rs/src/: main.rs
examples/hello-world-rs/: Cargo.toml  README.md
examples/hello-world-rs/src/: main.rs
examples/video-pipeline-rs/: Cargo.toml  README.md
examples/video-pipeline-rs/src/: main.rs  pipeline.rs  tasks.rs
playground/: README.md  sayiir.d.ts
python/: README.md  pyproject.toml
python/sayiir/: __init__.py  _sayiir.pyi  decorators.py  executor.py  flow.py
python/tests/: test_engine.py  test_pydantic.py
sayiir-cloudflare/: Cargo.toml
sayiir-cloudflare-js/: README.md  (+3 more)
sayiir-cloudflare/src/: codec.rs  durable.rs  engine.rs  error.rs  flow.rs  lib.rs  lifecycle.rs  status.rs
sayiir-core/: Cargo.toml  README.md
sayiir-core/src/: branch_key.rs  branch_results.rs  builder.rs  codec.rs  context.rs  continuation_builder.rs  deps.rs  error.rs  hash32.rs  lib.rs  loop_result.rs  prelude.rs  priority.rs  registry.rs  snapshot.rs  snapshot_format.rs  task.rs  task_claim.rs  task_index.rs  validation.rs  workflow.rs
sayiir-d1/: Cargo.toml
sayiir-d1/migrations/: 001_initial.sql  002_task_priority.sql  003_task_tags.sql  004_awaited_signal_name.sql
sayiir-d1/src/: backend.rs  bindings.rs  error.rs  helpers.rs  js_future.rs  lib.rs  schema.rs  signal_store.rs  snapshot_store.rs
sayiir-di/: Cargo.toml  README.md
sayiir-di/src/: lib.rs
sayiir-dynamodb/: Cargo.toml
sayiir-dynamodb/src/: backend.rs  error.rs  helpers.rs  lib.rs  signal_store.rs  snapshot_store.rs  task_claim_store.rs
sayiir-dynamodb/tests/: integration.rs
sayiir-macros/: Cargo.toml  README.md
sayiir-macros/src/: branch_key.rs  lib.rs  util.rs
sayiir-macros/src/task/: codegen.rs  duration.rs  mod.rs  parse.rs
sayiir-macros/src/workflow/: ast.rs  codegen.rs  mod.rs  parse.rs
sayiir-node/: Cargo.toml
sayiir-node/src/: backend.rs  codec.rs  durable_engine.rs  engine.rs  exceptions.rs  flow.rs  lib.rs  task.rs  telemetry.rs  worker.rs  workflow_client.rs  yaml.rs
sayiir-persistence/: Cargo.toml  README.md
sayiir-persistence/src/: backend.rs  in_memory.rs  lib.rs  lifecycle.rs  validation.rs
sayiir-postgres/: Cargo.toml  README.md
sayiir-postgres/benches/: postgres.rs
sayiir-postgres/migrations/: 001_initial.sql  002_observability.sql  003_workflow_events.sql  004_trace_context.sql  005_history_unique_version.sql  006_task_priority.sql  007_task_tags.sql  008_perf_indexes.sql  008_performance_optim.sql  009_index_cleanup.sql  009_task_id_bytea.sql  009_workflow_claims.sql  010_dispatch_indexes.sql  010_history_canonical.sql  010_task_output.sql  011_history_canonical.sql  012_snapshots_data_hash.sql  013_drop_redundant_updated_index.sql  013_fold_task_claims.sql
sayiir-postgres/src/: backend.rs  backfill.rs  error.rs  helpers.rs  history.rs  lib.rs  signal_store.rs  snapshot_store.rs  task_claim_store.rs  task_result_store.rs  wakeup.rs
sayiir-postgres/tests/: integration.rs
sayiir-py/: Cargo.toml
sayiir-py/src/: backend.rs  codec.rs  durable_engine.rs  engine.rs  exceptions.rs  flow.rs  lib.rs  task.rs  telemetry.rs  worker.rs  workflow_client.rs  yaml.rs
sayiir-python/: README.md  pyproject.toml
sayiir-python/sayiir/: __init__.py  _sayiir.pyi  decorators.py  executor.py  flow.py  loop_result.py  worker.py  workflow_client.py  yaml.py
sayiir-python/tests/: test_child_workflow.py  test_engine.py  test_loop.py  test_pydantic.py  test_worker_integration.py
sayiir-runtime/: Cargo.toml  README.md
sayiir-runtime/src/: client.rs  error.rs  execution.rs  lib.rs  prelude.rs  trace_context.rs  worker.rs
sayiir-runtime/src/execution/: control_flow.rs  executors.rs  fork.rs  helpers.rs  lifecycle.rs  loop_runner.rs  mod.rs  tests.rs
sayiir-runtime/src/runner/: distributed.rs  ext.rs  in_process.rs  mod.rs
sayiir-runtime/src/serialization/: json.rs  mod.rs  rkyv.rs
sayiir-yaml/: Cargo.toml
sayiir-yaml/src/: compiler.rs  envelope.rs  error.rs  jmespath.rs  lib.rs  schema.rs
sayiir-yaml/src/actions/: http.rs  lambda.rs  mod.rs  shell.rs
sayiir-yaml/tests/: parse_tests.rs  roundtrip_tests.rs
tests/integration/: Cargo.toml
tests/integration/tests/: checkpointing_runner.rs  deps_workflow.rs  macro_workflows.rs
tests/integration/tests/common/: mod.rs
workflow-core/: Cargo.toml
workflow-core/src/: codec.rs  context.rs  continuation.rs  error.rs  lib.rs  primitives.rs  registry.rs  snapshot.rs  task.rs  task_claim.rs  workflow.rs
workflow-core/src/serialization/: json.rs  mod.rs
workflow-persistence/: Cargo.toml  README.md
workflow-persistence/src/: backend.rs  in_memory.rs  lib.rs
workflow-py/: Cargo.toml
workflow-py/src/: backend.rs  channel.rs  codec.rs  durable_engine.rs  engine.rs  flow.rs  lib.rs  task.rs
workflow-runtime/: Cargo.toml  README.md  ROADMAP.md
workflow-runtime/src/: execution.rs  lib.rs  worker.rs
workflow-runtime/src/persistence/: backend.rs  distributed.rs  in_memory.rs  mod.rs  snapshot.rs  worker.rs
workflow-runtime/src/runner/: distributed.rs  in_process.rs  mod.rs
workflow-runtime/src/serialization/: json.rs  mod.rs  rkyv.rs
(+191 files in other folders)
