[workspace]
members = [
    "sayiir-core",
    "sayiir-persistence",
    "sayiir-postgres",
    "sayiir-d1",
    "sayiir-runtime",
    "sayiir-macros",
    "sayiir-py",
    "sayiir-node",
    "sayiir-cloudflare",
    "tests/integration",
]
resolver = "2"
exclude = ["examples/hello-world-rs", "examples/video-pipeline-rs", "benchmarks"]

[workspace.package]
version = "0.5.0"
authors = ["Yacine Bouraoui <ybsoft2011@live.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/sayiir/sayiir"
homepage = "https://docs.sayiir.dev"
categories = ["asynchronous", "concurrency"]
keywords = ["workflow", "orchestration", "durable", "async", "distributed"]
documentation = "https://docs.rs/sayiir-core"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
sayiir-core = { version = "0.5.0", path = "sayiir-core", default-features = false }
sayiir-persistence = { version = "0.5.0", path = "sayiir-persistence" }
sayiir-runtime = { version = "0.5.0", path = "sayiir-runtime", default-features = false }
sayiir-postgres = { version = "0.5.0", path = "sayiir-postgres" }
sayiir-d1 = { version = "0.5.0", path = "sayiir-d1" }
sayiir-cloudflare = { version = "0.5.0", path = "sayiir-cloudflare" }
sayiir-macros = { version = "0.5.0", path = "sayiir-macros" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
] }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.33"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
    "clock",
] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rkyv = { version = "0.8", features = ["std", "bytecheck", "bytes-1"] }
bytecheck = "0.8"
tokio = { version = "1", features = ["rt"] }
sha2 = "0.10"
hex = "0.4"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
proptest = "1"
backon = "1"
nanoserde = "0.2"
flume = "0.12"
rustc-hash = "2"
