[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sayiir"
version = "0.1.0"
description = "Python bindings for the Sayiir workflow library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["workflow", "orchestration", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
pydantic = ["pydantic>=2.0"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.maturin]
manifest-path = "../workflow-py/Cargo.toml"
module-name = "sayiir._sayiir"
python-source = "."
features = ["pyo3/extension-module"]
