[package]
name = "sayiir-core"
description = "Core types and traits for the Sayiir durable workflow engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "sayiir_core"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
