[package]
name = "sayiir-core"
description = "Core types and traits for the Sayiir durable workflow engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/sayiir-core"

[lib]
name = "sayiir_core"
path = "src/lib.rs"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[dependencies]
sayiir-di = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
rkyv = { workspace = true, optional = true }
bytecheck = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
