[package]
name = "sayiir-d1"
description = "Cloudflare D1 (SQLite) persistence backend for Sayiir workflow engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "sayiir_d1"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sayiir-core = { workspace = true, default-features = false }
sayiir-persistence = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
send_wrapper = "0.6"
