[package]
name = "sayiir-d1"
description = "Cloudflare D1 (SQLite) persistence backend for Sayiir workflow engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "sayiir_d1"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sayiir-core = { workspace = true, default-features = false }
sayiir-persistence = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8"}

# D1
sqlx-d1 = { version = "0.3", optional = true }
worker = { version = "*", optional = true }  # version by sqlx-d1

[features]
default = ["d1"]
sqlite = [
    "sqlx/sqlite",
    "sqlx/runtime-tokio",
]
d1 = [
    "sqlx-d1",
    "worker",
]
