[package]
name = "sayiir-node"
description = "NAPI-RS bridge between Node.js and the Sayiir workflow runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi9", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
serde_json = { workspace = true }
sayiir-core = { workspace = true }
sayiir-persistence = { workspace = true }
sayiir-postgres = { workspace = true }
sayiir-runtime = { workspace = true, features = ["json"] }
sayiir-yaml = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
napi-build = "2"
