[package]
name = "sayiir-persistence"
description = "Pluggable persistence backends for Sayiir workflow snapshots"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "sayiir_persistence"
path = "src/lib.rs"

[dependencies]
sayiir-core = { path = "../sayiir-core" }
thiserror = "2"
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
