[package]
name = "sayiir-persistence"
description = "Pluggable persistence backends for Sayiir workflow snapshots"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/sayiir-persistence"

[lib]
name = "sayiir_persistence"
path = "src/lib.rs"

[dependencies]
sayiir-core = { workspace = true }
thiserror = "2"
bytes = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
