[package]
name = "sayiir-postgres"
description = "PostgreSQL persistence backend for Sayiir workflow engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/sayiir-postgres"

[lib]
name = "sayiir_postgres"
path = "src/lib.rs"

[dependencies]
sayiir-core = { workspace = true }
sayiir-persistence = { workspace = true }
sqlx = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tokio-util = { version = "0.7", default-features = false }
backon = { workspace = true }
# `Receiver: Clone` + `recv_async(&self)` means we can hand a shared
# receiver to every backend clone without wrapping in a mutex.
flume = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "postgres"
harness = false

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sayiir-core = { workspace = true }
sayiir-runtime = { workspace = true, features = ["rkyv", "json", "macros"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serde_json = { workspace = true }
bytes = { workspace = true }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
