[package]
name = "sayiir-py"
description = "PyO3 bridge between Python and the Sayiir workflow runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "_sayiir"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

serde_json = { workspace = true }
sayiir-core = { path = "../sayiir-core" }
sayiir-persistence = { path = "../sayiir-persistence" }
sayiir-postgres = { path = "../sayiir-postgres" }
sayiir-runtime = { path = "../sayiir-runtime" }

[build-dependencies]
pyo3-build-config = "0.28"
