[package]
name = "sayiir-py"
description = "PyO3 bridge between Python and the Sayiir workflow runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "_sayiir"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

serde_json = { workspace = true }
sayiir-core = { workspace = true }
sayiir-persistence = { workspace = true }
sayiir-postgres = { workspace = true }
sayiir-runtime = { workspace = true, features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.28"
