[package]
name = "sayiir-runtime"
description = "Execution runtime, checkpointing runner and distributed workers for Sayiir workflows"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["rkyv", "json"]
json = []
rkyv = ["dep:rkyv", "dep:bytecheck"]

[dependencies]
sayiir-core = { version = "0.1.0-alpha.2", path = "../sayiir-core" }
sayiir-persistence = { version = "0.1.0-alpha.2", path = "../sayiir-persistence" }
sayiir-macros = { version = "0.1.0-alpha.2", path = "../sayiir-macros" }
tracing = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
thiserror = { workspace = true }
backon = "1"
futures = "0.3"
chrono = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true, optional = true }
bytecheck = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[lib]
name = "sayiir_runtime"
path = "src/lib.rs"
