[package]
name = "sayiir-runtime"
description = "Execution runtime, checkpointing runner and distributed workers for Sayiir workflows"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/sayiir-runtime"

[features]
default = ["rkyv", "json", "macros"]
json = ["dep:serde_json"]
rkyv = ["dep:rkyv", "dep:bytecheck", "sayiir-core/rkyv"]
macros = ["dep:sayiir-macros"]

[dependencies]
sayiir-core = { workspace = true, features = ["tokio"] }
sayiir-persistence = { workspace = true }
sayiir-macros = { workspace = true, optional = true }
tracing = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "macros"] }
thiserror = { workspace = true }
backon = { version = "1", default-features = false, features = ["tokio-sleep"] }
futures = "0.3"
chrono = { workspace = true }
hostname = "0.4"
serde_json = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
bytecheck = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "sayiir_runtime"
path = "src/lib.rs"
