[package]
name = "workflow-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "workflow_core"
path = "src/lib.rs"

[dependencies]
petgraph = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
workflow-macros = { path = "../workflow-macros" }
