[package]
name = "workflow-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "workflow_core"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
