[package]
name = "sayiir-py"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "_sayiir"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
dashmap = "6"
crossbeam-channel = "0.5"
bytes = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

workflow-core = { path = "../workflow-core" }
workflow-runtime = { path = "../workflow-runtime" }
workflow-persistence = { path = "../workflow-persistence" }

[build-dependencies]
pyo3-build-config = "0.23"
