[package]
name = "sayiir-py"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "_sayiir"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "anyhow"] }
bytes = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

workflow-core = { path = "../workflow-core" }
workflow-persistence = { path = "../workflow-persistence" }
workflow-runtime = { path = "../workflow-runtime" }

[build-dependencies]
pyo3-build-config = "0.28"
