[package]
name = "workflow-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
workflow-core = { path = "../workflow-core" }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "workflow_runtime"
path = "src/lib.rs"
