[package]
name = "workflow-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["rkyv", "json"]
json = ["dep:serde_json"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[dependencies]
workflow-core = { path = "../workflow-core" }
workflow-persistence = { path = "../workflow-persistence" }
workflow-macros = { path = "../workflow-macros" }
tracing = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-util = "0.7"
futures = "0.3"
chrono = { workspace = true }
serde_json = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
bytecheck = { workspace = true, optional = true }

[lib]
name = "workflow_runtime"
path = "src/lib.rs"
