[package]
name = "hello-world-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sayiir-runtime = { path = "../../sayiir-runtime" }
sayiir-persistence = { path = "../../sayiir-persistence" }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
