[package]
name = "video-pipeline-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sayiir-core = { path = "../../sayiir-core" }
sayiir-runtime = { path = "../../sayiir-runtime" }
sayiir-persistence = { path = "../../sayiir-persistence" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
bytes = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
