[package]
name = "sayiir-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
sayiir-core = { workspace = true }
sayiir-persistence = { workspace = true }
sayiir-postgres = { workspace = true }
sayiir-runtime = { workspace = true, features = ["rkyv", "json", "macros"] }
bytes.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
testcontainers = "0.26"                                                      # TODO: update to 0.27
testcontainers-modules = { version = "0.14", features = ["postgres"] }
sayiir-macros = { workspace = true }
serde = { workspace = true }
